# hyperia-task

./: .gitignore  README.md  pylintrc.toml  pyproject.toml  pyrightconfig.json
hyperia_task/: __init__.py  __main__.py  bulletin_scraper.py  hypermarket_extractor.py  prospect.py  prospect_extractor.py  prospekt.py  prospekt_extractor.py
